# davis

./: Cargo.toml  MANUAL.md  MANUAL.txt  README.md  build.rs  davis.1
benches/: sixel_bench.rs
completions/: davis.bash
src/: albumart.rs  ansi.rs  cli.rs  config.rs  error.rs  filecache.rs  logger.rs  main.rs  now_playing.rs  queue.rs  seek.rs  status.rs  subcommands.rs  tab.rs  table.rs  tags.rs  terminal_dimensions.rs
src/sixel/: lib.rs
subcommands/: README.md
subcommands/cover/: README.md  davis-cover
subcommands/cur/: README.md  davis-cur-horizontal  davis-cur-vertical
subcommands/fzf/: README.md  davis-fzf
