[package]
name = "davis"
version = "0.1.0"
authors = ["Simon Persson <simon@flaskpost.me>"]
edition = "2018"

[[bin]]
name = "davis"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
libc = "0.2"
mpd = { git = "https://github.com/SimonPersson/rust-mpd.git" }
lexopt = "0.2"
configparser = "3"
log = "0.4"
